--- a/Examples/2_analyzing.ipynb
+++ b/Examples/2_analyzing.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4729b6",
+   "id": "1ac113c5",
    "metadata": {},
    "source": [
     "# RSCU\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "132b708b",
+   "id": "b3dd36ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66eddccc",
+   "id": "ed7dd4c2",
    "metadata": {},
    "source": [
     "Below written code is just for vizualisation purpose."
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5f91aa82",
+   "id": "f222ae8e",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7c65a6",
+   "id": "31a3183f",
    "metadata": {},
    "source": [
     "## Genome analysis"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ca035d8b",
+   "id": "f4bb7830",
    "metadata": {
     "scrolled": true
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b30ff03",
+   "id": "da319ea3",
    "metadata": {},
    "source": [
     "## Saving the file"
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "129de952",
+   "id": "414e7922",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44eca43",
+   "id": "05e46317",
    "metadata": {},
    "source": [
     "__Note__: here `min_len_threshold = 66` because 66 amino acids is translated from 198 nucleotide base-pairs. For nucleotide ([CAI](#CAI)) `min_len_threshold = 200`, hence in this case it's 66. Also where ever the sequence is based on nucleotide, default value for `min_len_threshold` is 200; else if based on amino acid, the value is 66.\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6f5b448c",
+   "id": "0d49449c",
    "metadata": {
     "scrolled": true
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1336381d",
+   "id": "5e4aace2",
    "metadata": {},
    "source": [
     "## Genome Analysis"
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ace9999d",
+   "id": "25cb4bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c48338",
+   "id": "3b1daf66",
    "metadata": {},
    "source": [
     "`gene_analysis` is not given here beacuse the default value is `False`.\n",
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8a57a566",
+   "id": "20cbec8a",
    "metadata": {
     "scrolled": true
    },
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c79bec7",
+   "id": "981568cb",
    "metadata": {},
    "source": [
     "## Saving the file"
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "aad8fe3f",
+   "id": "b5e2d6f8",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13215b0f",
+   "id": "2b49cc09",
    "metadata": {},
    "source": [
     "Above you can see a promt asking the user if (s)he wants to rewrite a file. CodonU will ask this if provided file is not empty."
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc26fa8",
+   "id": "407ae747",
    "metadata": {},
    "source": [
     "__For reducing redundency, i will now present the tutorial in short.__"
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21799d1a",
+   "id": "e8bc1ea8",
    "metadata": {},
    "source": [
     "# ENc"
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8515d665",
+   "id": "85229d02",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e91c4833",
+   "id": "cb7b4aed",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "df7c94d6",
+   "id": "186304aa",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5495b95a",
+   "id": "d312fc8c",
    "metadata": {},
    "source": [
     "# Aromaticity"
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e4aa32ac",
+   "id": "5c76c919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55180649",
+   "id": "6cb22438",
    "metadata": {},
    "source": [
     "As aromaticity and gravy scores are for proteins, hence i've changed the file path."
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8eb76d30",
+   "id": "3bd4fc25",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3a439d91",
+   "id": "dec91009",
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bec3bf87",
+   "id": "9ef1f3e1",
    "metadata": {
     "scrolled": true
    },
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1ad139",
+   "id": "b6dd25ce",
    "metadata": {},
    "source": [
     "# GRAVY"
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f90b33c7",
+   "id": "0c0f46c5",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c8328583",
+   "id": "511f97ff",
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "346dfc43",
+   "id": "8a853641",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d182ef",
+   "id": "7dc21736",
    "metadata": {},
    "source": [
     "## Nucleotide Analysis"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "40905312",
+   "id": "448f81fb",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8e7b2855",
+   "id": "5a36d743",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290c9fcc",
+   "id": "c3369f35",
    "metadata": {},
    "source": [
     "## Protein Analysis"
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e94df06a",
+   "id": "7c550e52",
    "metadata": {},
    "outputs": [
     {
@@ -1194,12 +1194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "348ec8ed",
+   "execution_count": 48,
+   "id": "c0e0ad98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating GRAVY score, please be patient, this may take some time.\n",
+      "Calculating aromaticity, please be patient, this may take some time.\n",
+      "\n",
+      "The report can be found at /home/souro/Projects/CodonU/Examples/Report/summary_report_test_aa.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "an.generate_reportport_summary(in_file, 'aa', 11, 66)"
+    "an.generate_report_summary(in_file, 'aa', 11, 66)"
    ]
   }
  ],
