Updated usage of functions

--- a/Examples/1_file_handle_extraction.ipynb
+++ b/Examples/1_file_handle_extraction.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CodonU import file_handler as fh    # for file handling\n",
-    "from CodonU import extractor as ex    # for extracting the data\n",
+    "from CodonU.file_handler import make_dir, set_entrez_param    # for making directories and set entrez parameters\n",
+    "from CodonU.file_handler import write_exome_fasta, write_nucleotide_fasta, write_protein_fasta    # retrieveing data\n",
     "import pandas as pd    # we will need it for reading the data\n",
     "from os.path import join    # we will need it for writing the files"
    ]
@@ -70,22 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "4c31743b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nucleotide created successfully\n",
-      "Exome created successfully\n",
-      "Protein created successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_path_dict = {\n",
     "    'nucleo': 'Nucleotide',\n",
@@ -94,85 +84,7 @@
     "}\n",
     "\n",
     "for path in folder_path_dict.keys():\n",
-    "    fh.make_dir(folder_path_dict[path])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e6973fe",
-   "metadata": {},
-   "source": [
-    "# Reading the csv file\n",
-    "\n",
-    "CodonU gives the user the liberty to fetch genebank files from NCBI directly. In order to do that users just need a .csv file containing the organism name and accession id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "93be7826",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Accession_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Staphylococcus agnetis</td>\n",
-       "      <td>CP045927.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Staphylococcus argenteus</td>\n",
-       "      <td>FR821777.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Staphylococcus aureus</td>\n",
-       "      <td>CP000253.1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Name Accession_id\n",
-       "0    Staphylococcus agnetis   CP045927.1\n",
-       "1  Staphylococcus argenteus   FR821777.2\n",
-       "2     Staphylococcus aureus   CP000253.1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('Staphylococcus_species.csv')\n",
-    "df"
+    "    make_dir(folder_path_dict[path])"
    ]
   },
   {
@@ -180,15 +92,35 @@
    "id": "27bfb94a",
    "metadata": {},
    "source": [
-    "# Retriving the gb file"
+    "# Retriving the gb file\n",
+    "\n",
+    "In this tutorial we will fetch genebank file of *Staphylococcus aureus subsp. aureus str. Newman* (accession id: AP009351.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "40d83e7e",
+   "execution_count": 2,
+   "id": "a08bdc16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accession_id = 'AP009351.1'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c63f53c6",
+   "metadata": {},
+   "source": [
+    "## Writing the nucleotide file containing CDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "20ed9b39",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -220,40 +152,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Genbank file of Staphylococcus agnetis retrieved successfully\n",
-      "Nucleotide file for Staphylococcus agnetis created successfully\n",
-      "Exome file for Staphylococcus agnetis created successfully\n",
-      "Protein file for Staphylococcus agnetis created successfully\n",
-      "Retrieval started\n",
-      "Genbank file of Staphylococcus argenteus retrieved successfully\n",
-      "Nucleotide file for Staphylococcus argenteus created successfully\n",
-      "Exome file for Staphylococcus argenteus created successfully\n",
-      "Protein file for Staphylococcus argenteus created successfully\n",
-      "Retrieval started\n",
-      "Genbank file of Staphylococcus aureus subsp. aureus NCTC 8325 retrieved successfully\n",
-      "Nucleotide file for Staphylococcus aureus created successfully\n",
-      "Exome file for Staphylococcus aureus created successfully\n",
-      "Protein file for Staphylococcus aureus created successfully\n"
+      "Genbank file of Staphylococcus aureus subsp. aureus str. Newman retrieved successfully\n",
+      "Nucleotide file can be found at: /home/souro/Projects/CodonU/Examples/Nucleotide/Staphylococcus_aureus.fasta\n"
      ]
     }
    ],
    "source": [
-    "for idx in df.index:\n",
-    "    # getting the accession id\n",
-    "    accession_id = df['Accession_id'][idx]\n",
-    "    # retreiving the data\n",
-    "    record = fh.get_gb(accession_id)\n",
-    "    cds_lst = ex.extract_cds_lst(record)\n",
-    "    # taking the organism name\n",
-    "    organism_name = \"_\".join(df['Name'][idx].split())\n",
-    "    # defining the file paths\n",
-    "    nuc_file_path = join(folder_path_dict['nucleo'], f\"{organism_name}_nucleotide.fasta\")\n",
-    "    exome_file_path = join(folder_path_dict['exome'], f\"{organism_name}_exome.fasta\")\n",
-    "    prot_file_path = join(folder_path_dict['prot'], f\"{organism_name}_protein.fasta\")\n",
-    "    # writing the files\n",
-    "    fh.write_nucleotide_fasta(nuc_file_path, cds_lst, record, df['Name'][idx])\n",
-    "    fh.write_exome_fasta(exome_file_path, nuc_file_path, df['Name'][idx])\n",
-    "    fh.write_protein_fasta(prot_file_path, cds_lst, df['Name'][idx])"
+    "file_path = 'Nucleotide/Staphylococcus_aureus.fasta'\n",
+    "write_nucleotide_fasta(accession_id=accession_id, file_path=file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5cd6b04",
+   "metadata": {},
+   "source": [
+    "## Writing the protein file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aed200c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieval started\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/souro/Projects/CodonU/.venv/lib64/python3.11/site-packages/Bio/Entrez/__init__.py:694: UserWarning: \n",
+      "            Email address is not specified.\n",
+      "\n",
+      "            To make use of NCBI's E-utilities, NCBI requires you to specify your\n",
+      "            email address with each request.  As an example, if your email address\n",
+      "            is A.N.Other@example.com, you can specify it as follows:\n",
+      "               from Bio import Entrez\n",
+      "               Entrez.email = 'A.N.Other@example.com'\n",
+      "            In case of excessive usage of the E-utilities, NCBI will attempt to contact\n",
+      "            a user at the email address provided before blocking access to the\n",
+      "            E-utilities.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genbank file of Staphylococcus aureus subsp. aureus str. Newman retrieved successfully\n",
+      "Protein file can be found at: /home/souro/Projects/CodonU/Examples/Protein/Staphylococcus_aureus.fasta\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'Protein/Staphylococcus_aureus.fasta'\n",
+    "write_protein_fasta(accession_id=accession_id, file_path=file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17d92fd5",
+   "metadata": {},
+   "source": [
+    "## Writing the exome file\n",
+    "The function which writes the exome file, takes an additional input for parameter named `exclude_stops`, which controls the behaviour of including or excluding internal stop codons. In easy words, the exome file contains all the CDS, but as a single sequence. Now, if the stop codons from each CDS is included, then the sequence is meaningless in context of analysis. So, if you pass `True`, all the internal stop codons will not be appended during creation of the exone. If `False`, then the sequence will contain internal stop codons, which may create problems later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "378bce21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieval started\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/souro/Projects/CodonU/.venv/lib64/python3.11/site-packages/Bio/Entrez/__init__.py:694: UserWarning: \n",
+      "            Email address is not specified.\n",
+      "\n",
+      "            To make use of NCBI's E-utilities, NCBI requires you to specify your\n",
+      "            email address with each request.  As an example, if your email address\n",
+      "            is A.N.Other@example.com, you can specify it as follows:\n",
+      "               from Bio import Entrez\n",
+      "               Entrez.email = 'A.N.Other@example.com'\n",
+      "            In case of excessive usage of the E-utilities, NCBI will attempt to contact\n",
+      "            a user at the email address provided before blocking access to the\n",
+      "            E-utilities.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Genbank file of Staphylococcus aureus subsp. aureus str. Newman retrieved successfully\n",
+      "Exome file can be found at: /home/souro/Projects/CodonU/Examples/Exome/Staphylococcus_aureus.fasta\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'Exome/Staphylococcus_aureus.fasta'\n",
+    "write_exome_fasta(file_path=file_path, accession_id=accession_id, exclude_stops=True)"
    ]
   },
   {
@@ -261,22 +274,21 @@
    "id": "b80cc29a",
    "metadata": {},
    "source": [
-    "If you want to go with a single organism, the optimal path may be \n",
+    "If you want to go with a multiple organism, you can try:\n",
     "\n",
     "```\n",
-    "accession_id = ''\n",
-    "organism_name = ''\n",
+    "from os.path, import join\n",
     "\n",
-    "nuc_file_path = ''\n",
-    "exome_file_path = ''\n",
-    "prot_file_path = ''\n",
+    "accession_ids = []    # accession ids of the organisms in the list\n",
+    "orgasim_names = []    # respective organism names\n",
     "\n",
-    "record = fh.get_gb(accession_id)\n",
-    "cds_lst = ex.extract_cds_lst(record)\n",
+    "nuc_folder_path = ''\n",
+    "# exome_folder_path = ''\n",
+    "# prot_folder_path = ''\n",
     "\n",
-    "fh.write_nucleotide_fasta(nuc_file_path, cds_lst, record, organism_name)\n",
-    "fh.write_exome_fasta(exome_file_path, nuc_file_path, organism_name)\n",
-    "fh.write_protein_fasta(prot_file_path, cds_lst, organism_name)\n",
+    "for idx in range(len(accession_ids)):\n",
+    "    file_path = join(organism_names[idx], nuc_folder_path)    # may give other folder path if necessary\n",
+    "    write_nucleotide_fasta(accession_ids[idx], file_path)    # may give other function\n",
     "\n",
     "```"
    ]
@@ -298,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
