--- a/Examples/2_analyzing.ipynb
+++ b/Examples/2_analyzing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c28b6e99",
    "metadata": {},
    "outputs": [],
@@ -1196,7 +1196,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "c0e0ad98",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1211,6 +1213,245 @@
    ],
    "source": [
     "an.generate_report_summary(in_file, 'aa', 11, 66)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb481870",
+   "metadata": {},
+   "source": [
+    "# tAI\n",
+    "\n",
+    "You can retrieve tRNA gene copy number from two famous web serevers, i.e.\n",
+    "  -  GtRNAdb [http://gtrnadb.ucsc.edu/](http://gtrnadb.ucsc.edu/)\n",
+    "  -  tRNADB-CE [http://trna.ie.niigata-u.ac.jp/cgi-bin/trnadb/index.cgi](http://trna.ie.niigata-u.ac.jp/cgi-bin/trnadb/index.cgi)\n",
+    "  \n",
+    "In order to retrieve the data you just need to give the link, and type of database. Here we will be retrieveing the data for *Staphylococcus aureus subsp. aureus str. Newman*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fc0609bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://gtrnadb.ucsc.edu/GtRNAdb2/genomes/bacteria/Stap_aure_aureus_Newman/'\n",
+    "\n",
+    "anti_codon_dict = an.get_anticodon_count_dict(\n",
+    "    url = url,\n",
+    "    database='GtRNAdb'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb54e7c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IGC: 0\n",
+      "GGC: 0\n",
+      "CGC: 0\n",
+      "UGC: 3\n",
+      "ICC: 0\n",
+      "GCC: 2\n",
+      "CCC: 0\n",
+      "UCC: 5\n",
+      "IGG: 0\n",
+      "GGG: 0\n",
+      "CGG: 0\n",
+      "UGG: 2\n",
+      "IGU: 0\n",
+      "GGU: 0\n",
+      "CGU: 0\n",
+      "UGU: 3\n",
+      "IAC: 0\n",
+      "GAC: 0\n",
+      "CAC: 0\n",
+      "UAC: 3\n",
+      "IGA: 0\n",
+      "GGA: 1\n",
+      "CGA: 0\n",
+      "UGA: 3\n",
+      "GCU: 1\n",
+      "ICG: 2\n",
+      "GCG: 0\n",
+      "CCG: 1\n",
+      "UCG: 0\n",
+      "CCU: 0\n",
+      "UCU: 1\n",
+      "IAG: 0\n",
+      "GAG: 1\n",
+      "CAG: 0\n",
+      "UAG: 1\n",
+      "CAA: 1\n",
+      "UAA: 2\n",
+      "GAA: 2\n",
+      "GUU: 3\n",
+      "CUU: 0\n",
+      "UUU: 3\n",
+      "GUC: 4\n",
+      "CUC: 0\n",
+      "UUC: 3\n",
+      "GUG: 2\n",
+      "CUG: 0\n",
+      "UUG: 2\n",
+      "IAU: 0\n",
+      "GAU: 2\n",
+      "CAU: 4\n",
+      "UAU: 0\n",
+      "GUA: 2\n",
+      "UCA: 0\n",
+      "CUA: 0\n",
+      "UUA: 0\n",
+      "GCA: 1\n",
+      "CCA: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for anti_codon, count in anti_codon_dict.items():\n",
+    "    print(f'{anti_codon}: {count}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeb0e240",
+   "metadata": {},
+   "source": [
+    "Now we will look into the function that calculates tAI, the name is `calculate_gtai`. The parameters for the functions are:\n",
+    "  - `handle`: Path to the fasta file as a string\n",
+    "  - `anticodon_dict`: The dictionary containing anticodon as key and count as value\n",
+    "  - `genetic_code_num`: Genetic table number for codon table\n",
+    "  - `reference`: Path to the reference fasta file as a string (Optional)\n",
+    "  - `size_pop`: A parameter for the genetic algorithm to identify the population size (Optional)\n",
+    "  - `generation_num`: A parameter for the genetic algorithm to identify the generation number (Optional)\n",
+    "  - `save_file`: Option for saving the values in xlsx format (Optional)\n",
+    "  - `file_name`: Intended file name (Optional)\n",
+    "  - `folder_path`: Folder path where image should be saved (optional)\n",
+    "  \n",
+    "The function returns following dataframes:\n",
+    "  - `tai_df`: The dataframe contains gene description and tAI values\n",
+    "  - `abs_wi_df`: The dataframe contains each anticodon and absolute weights according to the paper\n",
+    "  - `rel_wi_df`: The dataframe contains each anticodon and relative weights according to the paper\n",
+    "  \n",
+    "Also it is worth mentioning here that a file named `best_fit.py` will be containing the values of iteration number, values of sij , and fitness. Also a `.enc` file will be created.\n",
+    "\n",
+    "As the function invloves parser, it is uploaded as a seperate file named [`tRNA.py`](https://github.com/SouradiptoC/CodonU/blob/8da5f9109433fb6048922f74543da238c8b7f970/Examples/tRNA.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d21881f7-7266-4a81-943b-e09ea992f214",
+   "metadata": {},
+   "source": [
+    "# Customized Codon Table\n",
+    "\n",
+    "In this section we will see how to create custom codon table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "be7525e1-960d-4a4f-aab9-fdc91eec79b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name = 'My_custom_name'\n",
+    "table_name_alt = 'MyCusNameAlt'    # this name is optional\n",
+    "table_id = 101\n",
+    "forward_table = {    # This must be a dictionary\n",
+    "    \"TTT\": \"F\", \"TTC\": \"F\", \"TTA\": \"L\", \"TTG\": \"L\",\n",
+    "    \"TCT\": \"S\", \"TCC\": \"S\", \"TCA\": \"S\", \"TCG\": \"S\",\n",
+    "    \"TAT\": \"Y\", \"TAC\": \"Y\",                           # noqa: E241, this is for autopep formatter\n",
+    "    \"TGT\": \"C\", \"TGC\": \"C\",             \"TGG\": \"W\",   # noqa: E241\n",
+    "    \"CTT\": \"L\", \"CTC\": \"L\", \"CTA\": \"L\", \"CTG\": \"L\",\n",
+    "    \"CCT\": \"P\", \"CCC\": \"P\", \"CCA\": \"P\", \"CCG\": \"P\",\n",
+    "    \"CAT\": \"H\", \"CAC\": \"H\", \"CAA\": \"Q\", \"CAG\": \"Q\",\n",
+    "    \"CGT\": \"R\", \"CGC\": \"R\", \"CGA\": \"R\", \"CGG\": \"R\",\n",
+    "    \"ATT\": \"I\", \"ATC\": \"I\", \"ATA\": \"I\", \"ATG\": \"M\",\n",
+    "    \"ACT\": \"T\", \"ACC\": \"T\", \"ACA\": \"T\", \"ACG\": \"T\",\n",
+    "    \"AAT\": \"N\", \"AAC\": \"N\", \"AAA\": \"K\", \"AAG\": \"K\",\n",
+    "    \"AGT\": \"S\", \"AGC\": \"S\", \"AGA\": \"R\", \"AGG\": \"R\",\n",
+    "    \"GTT\": \"V\", \"GTC\": \"V\", \"GTA\": \"V\", \"GTG\": \"V\",\n",
+    "    \"GCT\": \"A\", \"GCC\": \"A\", \"GCA\": \"A\", \"GCG\": \"A\",\n",
+    "    \"GAT\": \"D\", \"GAC\": \"D\", \"GAA\": \"E\", \"GAG\": \"E\",\n",
+    "    \"GGT\": \"G\", \"GGC\": \"G\", \"GGA\": \"G\", \"GGG\": \"G\",\n",
+    "}    # Note: Stop codons must be excluded\n",
+    "stop_codons=[\"TAA\", \"TAG\", \"TGA\"]\n",
+    "start_codons=[\"TTG\", \"CTG\", \"ATT\", \"ATC\", \"ATA\", \"ATG\", \"GTG\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5badd34b-7054-4b8a-bc4e-22d7fe2883df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "an.custom_codon_table(\n",
+    "    name=table_name,\n",
+    "    alt_name=table_name_alt,\n",
+    "    genetic_code_id=table_id,\n",
+    "    forward_table=forward_table,\n",
+    "    stop_codons=stop_codons,\n",
+    "    start_codons=start_codons\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "341c123c-71b3-49c0-a727-dec90a391d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table 101 My_custom_name, MyCusNameAlt\n",
+      "\n",
+      "  |  T      |  C      |  A      |  G      |\n",
+      "--+---------+---------+---------+---------+--\n",
+      "T | TTT F   | TCT S   | TAT Y   | TGT C   | T\n",
+      "T | TTC F   | TCC S   | TAC Y   | TGC C   | C\n",
+      "T | TTA L   | TCA S   | TAA Stop| TGA Stop| A\n",
+      "T | TTG L(s)| TCG S   | TAG Stop| TGG W   | G\n",
+      "--+---------+---------+---------+---------+--\n",
+      "C | CTT L   | CCT P   | CAT H   | CGT R   | T\n",
+      "C | CTC L   | CCC P   | CAC H   | CGC R   | C\n",
+      "C | CTA L   | CCA P   | CAA Q   | CGA R   | A\n",
+      "C | CTG L(s)| CCG P   | CAG Q   | CGG R   | G\n",
+      "--+---------+---------+---------+---------+--\n",
+      "A | ATT I(s)| ACT T   | AAT N   | AGT S   | T\n",
+      "A | ATC I(s)| ACC T   | AAC N   | AGC S   | C\n",
+      "A | ATA I(s)| ACA T   | AAA K   | AGA R   | A\n",
+      "A | ATG M(s)| ACG T   | AAG K   | AGG R   | G\n",
+      "--+---------+---------+---------+---------+--\n",
+      "G | GTT V   | GCT A   | GAT D   | GGT G   | T\n",
+      "G | GTC V   | GCC A   | GAC D   | GGC G   | C\n",
+      "G | GTA V   | GCA A   | GAA E   | GGA G   | A\n",
+      "G | GTG V(s)| GCG A   | GAG E   | GGG G   | G\n",
+      "--+---------+---------+---------+---------+--\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Bio.Data.CodonTable import unambiguous_dna_by_id\n",
+    "print(unambiguous_dna_by_id[table_id])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70b279e8-fa10-4ee2-bef7-74a5b13ffbad",
+   "metadata": {},
+   "source": [
+    "On"
    ]
   }
  ],
@@ -1230,7 +1471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
