--- a/Examples/2_analyzing.ipynb
+++ b/Examples/2_analyzing.ipynb
@@ -1448,10 +1448,143 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b279e8-fa10-4ee2-bef7-74a5b13ffbad",
+   "id": "4c904389-7998-40c4-9510-5111c78d6920",
    "metadata": {},
    "source": [
-    "On"
+    "### Length and GC contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "51540faf-7051-4a2d-bfee-1a4eae6e503d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.Seq import Seq\n",
+    "from CodonU.analyzer.internal_comp import g3, a3, gc_123, at_123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3292a129-3328-4029-87ac-6f6e5c00e0f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = Seq('ATGAAACGCATTAGCACCACCATTACCACCACCATCACCATTACCACAGGTAACGGTGCGGGCTGA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3aa66759-e1f8-44bb-a96d-955735599b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = len(seq)\n",
+    "length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "09a580a5-9e69-4a5a-8035-cbfe8f57dc5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.090909090909092"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_3 = g3(seq)\n",
+    "g_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "107708a6-d273-4dc0-b97c-a3cf595bd6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.636363636363635"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_3 = a3(seq)\n",
+    "a_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "648204ce-435f-4d27-a7bb-6891b4d172a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(51.515151515151516, 22.727272727272727, 68.18181818181819, 63.63636363636363)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc123 = gc_123(seq)\n",
+    "gc123\n",
+    "# total, for first, second and third positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4d2ad29c-bc59-4ca3-8ad5-54e29d40cee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(48.484848484848484, 77.27272727272728, 31.818181818181813, 36.36363636363637)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "at123 = at_123(seq)\n",
+    "at123\n",
+    "# total, for first, second and third positions"
    ]
   }
  ],
